test/JDBC/expected/BABEL-1715-vu-verify.out
USE MASTER
GO


INSERT INTO bbl_1715_t1 VALUES (1, 1);
INSERT INTO bbl_1715_t1 VALUES (2, 2);
go
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

INSERT INTO bbl_1715_t1 VALUES (2, 3);
go
~~ERROR (Code: 2627)~~

~~ERROR (Message: duplicate key value violates unique constraint "uk_abbl_1715_t1309394cc13ed0160c093d0a0f82cb1c0")~~


INSERT INTO bbl_1715_t2 (a) VALUES (1);
INSERT INTO bbl_1715_t2 (a) VALUES (2);
go
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

INSERT INTO bbl_1715_t2 (a) VALUES (2);
go
~~ERROR (Code: 2627)~~

~~ERROR (Message: duplicate key value violates unique constraint "uk_abbl_1715_t2309394cc13ed0160c093d0a0f82cb1c0")~~


CREATE TABLE bbl_1715_invalid1 (a int b int);
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "b")~~

CREATE TABLE bbl_1715_invalid2 (a int CONSTRAINT uk_a PRIMARY KEY (a) b int);
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "b")~~

CREATE TABLE bbl_1715_invalid3 (a int CONSTRAINT uk_a PRIMARY KEY (a) CONSTRAINT uk_b UNIQUE (b));
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "CONSTRAINT")~~

